--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-cli": "^2.0.13"
   },
   "dependencies": {
+    "electron-is-dev": "^0.3.0",
     "gonode": "github:rotemgrim/gonode"
   }
 }
