--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "haste-sdk",
   "version": "1.0.0",
   "description": "",
-  "main": "./index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --env dev",
-    "dev": "webpack --progress --colors --watch --env dev"
+    "dev": "webpack --progress --colors --watch --env dev",
+    "check": "./node_modules/.bin/tslint --project tsconfig.json --config tslint.json"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "dts-webpack-plugin": "0.0.9",
     "ts-loader": "^4.1.0",
-    "typescript": "^2.8.1",
+    "tslint": "^5.9.1",
+    "tslint-loader": "^3.6.0",
+    "typescript": "^2.6.2",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.13"
   },
