make GoDispatcher global object

--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ deployPaths:
     - "C:\\projects\\haste\\static\\packages\\Mouse\\node_modules\\haste-sdk"
     - "C:\\projects\\haste\\static\\packages\\MovieSearch\\node_modules\\haste-sdk"
     - "C:\\projects\\haste\\static\\packages\\WebSearch\\node_modules\\haste-sdk"
+    - "C:\\projects\\haste\\static\\packages\\System\\node_modules\\haste-sdk"
