--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^9.6.6",
     "gulp": "^4.0.0",
     "gulp-clean": "^0.4.0",
     "js-yaml": "^3.11.0",
