changed the name from haste to typie!

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "haste-sdk",
-  "version": "1.0.2",
+  "name": "typie-sdk",
+  "version": "1.0.4",
   "description": "",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
